Add edge colors and button styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hypergraph Demo</title>
     <link rel="stylesheet" href="rotor.css"/>
     <link rel="stylesheet" href="sliders.css"/>
     <script src="js/user_interface.js"></script>
@@ -36,7 +36,7 @@
     <div class="modal-inner">
         <h2>Hyperedges</h2>
         <p>
-            Add hyperedges to your vertices
+            Add hyperedges to your vertices.
         </p>
         <table id="edges">
             <tr>
